What's New for PSPRadio 
========================
0.36-pre5
(raf) Lots of cleanup / refactoring
(raf) Now downloads a compressed version of SHOUTcast.com's database instead.
(sandberg) Added a particle system as a new background effect for the 3D UI.
(raf) Simplified wifi selection. One option to select profile or turn off.

0.36-pre4 (r427)
(raf) Enabled the CPU speed change option.
(raf) Added 111MHz; which is not useful for MP3, but works for OGGs in the text ui, and can save battery.
(raf) Refactored PSPApp/PSPRadio so that it runs in USERMODE. The drivers for the network and USB are now started from a kernel thread during app construction.
This allows for DHCP to work! (thanks to PspPet and 'benji' for figuring this out.)
(raf) L and R now navigate like Page UP/Down.

0.36-pre3 (r422)
(raf) Started adding SHOUTcast support
(sandberg) Implemented a VRAM memory manager, so all textures are now loaded from files
into VRAM.
(sandberg) Added full playlist and playlist entries support for the 3D UI.
(sandberg) made 2 minor error correction to the option menu.
(sandberg) Added rendering of the background effect to the option menu.
(jpfouch48) Re-vamped Grapics UI Theme class
(jpfouch48) Cleaned up theme implementation and theme file
(jpfouch48) Created icons for buffer display, network status, and stream status
(sandberg) Implemented support for using the Select(raf: changed to Start) button for entering the option menu.
The triangle button is only used for swapping between the playlist and Shoutcast list.
(raf) Now user needs to press X or O to go from playlist selection over to entries box.
(raf) Fixed crash on exit when logging is 80 or higher.
(raf) Added logging level selection and UI selection in Options menu.
(raf) Added option to download latest database from SHOUTcast.com (this is usable, but still work in progress. -- the app only lets you do this once a minute, not more often. (Shouldn't have to anyway))

0.36-pre2 (r364)