@@ -5,6 +5,7 @@ What's New for PSPRadio
 (raf) Now downloads a compressed version of SHOUTcast.com's database instead.
 (sandberg) Added a particle system as a new background effect for the 3D UI.
 (raf) Simplified wifi selection. One option to select profile or turn off.
+(raf) Screens are classes now. If going back and forth between screens, they will retain their state.
 
 0.36-pre4 (r427)
 (raf) Enabled the CPU speed change option.
